# mcp-run-sql-connectorx

./: .cursorindexingignore  .gitignore  LICENSE  README.md  README_JA.md  pyproject.toml
src/run_sql_connectorx/: __init__.py  server.py
