[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "run-sql-connectorx"
version = "0.1.1"
description = "MCP server to run SQL via ConnectorX and write CSV/Parquet in batches"
authors = [{ name = "Your Name" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anyio>=4.0.0",
  "mcp>=1.0.0",
  "connectorx>=0.4.4",
  "pyarrow>=12.0.0",
  "tiktoken>=0.7.0",
]

[project.scripts]
run-sql-connectorx = "run_sql_connectorx.server:main"
